Random Forest best parameters calculated and stored

--- a/.ipynb Notebooks/Random_Forest_Evaluation.ipynb
+++ b/.ipynb Notebooks/Random_Forest_Evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4             -0.641791      1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "(25192, 11)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,20 +228,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9948402460805715\n"
+      "Training accuracy: 0.9964273309184737 \n",
+      " Testing accuracy: 0.9946417940067473 \n",
+      " Precision: 0.9946428905100789 \n",
+      " Recall: 0.9946417940067473 \n",
+      " F1 Score: 0.9946419884432824 \n",
+      " Confusion Matrix: \n",
+      " [[2353   12]\n",
+      " [  15 2659]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.99      0.99      2365\n",
+      "           1       1.00      0.99      0.99      2674\n",
+      "\n",
+      "    accuracy                           0.99      5039\n",
+      "   macro avg       0.99      0.99      0.99      5039\n",
+      "weighted avg       0.99      0.99      0.99      5039\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "print(accuracy_score(y_pred,y_test))"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, classification_report\n",
+    "\n",
+    "train_acc=accuracy_score(y_train, classifier.predict(np.array(x_train)))\n",
+    "test_acc=accuracy_score(y_test, y_pred)\n",
+    "precision=precision_score(y_test, y_pred, average=\"weighted\")\n",
+    "recall=recall_score(y_test, y_pred, average=\"weighted\")\n",
+    "f1_score=f1_score(y_test, y_pred, average=\"weighted\")\n",
+    "conf_matrix=confusion_matrix(y_test, y_pred)\n",
+    "print(f'Training accuracy: {train_acc} \\n Testing accuracy: {test_acc} \\n Precision: {precision} \\n Recall: {recall} \\n F1 Score: {f1_score} \\n \\n Confusion Matrix: \\n {conf_matrix} \\n \\n')\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Param: (100, 5, 1, 0.01) \n",
+      " Score: 0.9704306410001985 \n",
+      "\n",
+      "Param: (100, 5, 1, 0.05) \n",
+      " Score: 0.9243897598729907 \n",
+      "\n",
+      "Param: (100, 5, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (100, 5, 5, 0.01) \n",
+      " Score: 0.9708275451478467 \n",
+      "\n",
+      "Param: (100, 5, 5, 0.05) \n",
+      " Score: 0.9239928557253423 \n",
+      "\n",
+      "Param: (100, 5, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (100, 5, 10, 0.01) \n",
+      " Score: 0.9708275451478467 \n",
+      "\n",
+      "Param: (100, 5, 10, 0.05) \n",
+      " Score: 0.9243897598729907 \n",
+      "\n",
+      "Param: (100, 5, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (100, 10, 1, 0.01) \n",
+      " Score: 0.9958325064496923 \n",
+      "\n",
+      "Param: (100, 10, 1, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (100, 10, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (100, 10, 5, 0.01) \n",
+      " Score: 0.9952371502282199 \n",
+      "\n",
+      "Param: (100, 10, 5, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (100, 10, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (100, 10, 10, 0.01) \n",
+      " Score: 0.9948402460805715 \n",
+      "\n",
+      "Param: (100, 10, 10, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (100, 10, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (100, 15, 1, 0.01) \n",
+      " Score: 0.9966263147449891 \n",
+      "\n",
+      "Param: (100, 15, 1, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (100, 15, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (100, 15, 5, 0.01) \n",
+      " Score: 0.9964278626711649 \n",
+      "\n",
+      "Param: (100, 15, 5, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (100, 15, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (100, 15, 10, 0.01) \n",
+      " Score: 0.9950386981543957 \n",
+      "\n",
+      "Param: (100, 15, 10, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (100, 15, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 5, 1, 0.01) \n",
+      " Score: 0.9708275451478467 \n",
+      "\n",
+      "Param: (250, 5, 1, 0.05) \n",
+      " Score: 0.9243897598729907 \n",
+      "\n",
+      "Param: (250, 5, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 5, 5, 0.01) \n",
+      " Score: 0.9708275451478467 \n",
+      "\n",
+      "Param: (250, 5, 5, 0.05) \n",
+      " Score: 0.9239928557253423 \n",
+      "\n",
+      "Param: (250, 5, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 5, 10, 0.01) \n",
+      " Score: 0.9704306410001985 \n",
+      "\n",
+      "Param: (250, 5, 10, 0.05) \n",
+      " Score: 0.9243897598729907 \n",
+      "\n",
+      "Param: (250, 5, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 10, 1, 0.01) \n",
+      " Score: 0.9956340543758683 \n",
+      "\n",
+      "Param: (250, 10, 1, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (250, 10, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 10, 5, 0.01) \n",
+      " Score: 0.9948402460805715 \n",
+      "\n",
+      "Param: (250, 10, 5, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (250, 10, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 10, 10, 0.01) \n",
+      " Score: 0.9946417940067473 \n",
+      "\n",
+      "Param: (250, 10, 10, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (250, 10, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 15, 1, 0.01) \n",
+      " Score: 0.9958325064496923 \n",
+      "\n",
+      "Param: (250, 15, 1, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (250, 15, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 15, 5, 0.01) \n",
+      " Score: 0.9966263147449891 \n",
+      "\n",
+      "Param: (250, 15, 5, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (250, 15, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (250, 15, 10, 0.01) \n",
+      " Score: 0.9960309585235165 \n",
+      "\n",
+      "Param: (250, 15, 10, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (250, 15, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 5, 1, 0.01) \n",
+      " Score: 0.9704306410001985 \n",
+      "\n",
+      "Param: (500, 5, 1, 0.05) \n",
+      " Score: 0.9239928557253423 \n",
+      "\n",
+      "Param: (500, 5, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 5, 5, 0.01) \n",
+      " Score: 0.9708275451478467 \n",
+      "\n",
+      "Param: (500, 5, 5, 0.05) \n",
+      " Score: 0.9239928557253423 \n",
+      "\n",
+      "Param: (500, 5, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 5, 10, 0.01) \n",
+      " Score: 0.9708275451478467 \n",
+      "\n",
+      "Param: (500, 5, 10, 0.05) \n",
+      " Score: 0.9239928557253423 \n",
+      "\n",
+      "Param: (500, 5, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 10, 1, 0.01) \n",
+      " Score: 0.9956340543758683 \n",
+      "\n",
+      "Param: (500, 10, 1, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (500, 10, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 10, 5, 0.01) \n",
+      " Score: 0.9950386981543957 \n",
+      "\n",
+      "Param: (500, 10, 5, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (500, 10, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 10, 10, 0.01) \n",
+      " Score: 0.9948402460805715 \n",
+      "\n",
+      "Param: (500, 10, 10, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (500, 10, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 15, 1, 0.01) \n",
+      " Score: 0.9964278626711649 \n",
+      "\n",
+      "Param: (500, 15, 1, 0.05) \n",
+      " Score: 0.9277634451280016 \n",
+      "\n",
+      "Param: (500, 15, 1, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 15, 5, 0.01) \n",
+      " Score: 0.9966263147449891 \n",
+      "\n",
+      "Param: (500, 15, 5, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (500, 15, 5, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Param: (500, 15, 10, 0.01) \n",
+      " Score: 0.9962294105973407 \n",
+      "\n",
+      "Param: (500, 15, 10, 0.05) \n",
+      " Score: 0.9275649930541774 \n",
+      "\n",
+      "Param: (500, 15, 10, 0.1) \n",
+      " Score: 0.9069259773764636 \n",
+      "\n",
+      "Best score: 0.9966263147449891 \n",
+      " Best param: {'n_learners': 100, 'max_depth': 15, 'min_samples_leaf': 1, 'min_information_gain': 0.01}\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {\n",
+    "    'n_learners': [100, 250, 500],\n",
+    "    'max_depth': [5, 10, 15],\n",
+    "    'min_samples_leaf': [1, 5, 10],\n",
+    "    'min_information_gain': [0.01, 0.05, 0.1]\n",
+    "}\n",
+    "\n",
+    "best_score = 0\n",
+    "best_param = None\n",
+    "\n",
+    "for n_learners in param_grid['n_learners']:\n",
+    "    for max_depth in param_grid['max_depth']:\n",
+    "        for min_samples_leaf in param_grid['min_samples_leaf']:\n",
+    "            for min_information_gain in param_grid['min_information_gain']:\n",
+    "                classifier=RandomForestClassifier(n_learners=n_learners,max_depth=max_depth,min_samples_leaf=min_samples_leaf,min_information_gain=min_information_gain)\n",
+    "                classifier.train(np.array(x_train),np.array(y_train))\n",
+    "                y_pred=classifier.predict(np.array(x_test))\n",
+    "                test_acc=accuracy_score(y_test, y_pred)\n",
+    "                print(f'Param: {n_learners, max_depth, min_samples_leaf, min_information_gain} \\nScore: {test_acc} \\n')\n",
+    "                if test_acc > best_score:\n",
+    "                    best_score = test_acc\n",
+    "                    best_param = {'n_learners': n_learners, 'max_depth': max_depth, 'min_samples_leaf': min_samples_leaf, 'min_information_gain': min_information_gain}\n",
+    "\n",
+    "print(f'Best score: {best_score} \\n Best param: {best_param}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Save best hyperparameters\n",
+    "with open(r\"..\\API\\model\\Hyperparams\\Rf_hparam.json\", \"w\") as f:\n",
+    "    json.dump(best_param, f)"
    ]
   }
  ],
