--- a/.ipynb Notebooks/packates_capturing.ipynb
+++ b/.ipynb Notebooks/packates_capturing.ipynb
@@ -489,7 +489,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "network_intrusion",
    "language": "python",
    "name": "python3"
   },
