LogisticRegression class completed and model saved

--- a/.ipynb Notebooks/knn.ipynb
+++ b/.ipynb Notebooks/knn.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -413,13 +413,13 @@
     "# Now, import your module\n",
     "from API.model.knn_classifier import KNNClassifier  # Import your KNN classifier\n",
     "\n",
-    "print(\"✅ Module imported successfully!\")\n",
+    "print(\"Module imported successfully!\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -439,14 +439,14 @@
     "# Try loading the model with joblib\n",
     "try:\n",
     "    knn_model = joblib.load(model_path)\n",
-    "    print(\"✅ kNN Model Loaded Successfully!\")\n",
+    "    print(\"kNN Model Loaded Successfully!\")\n",
     "except Exception as e:\n",
-    "    print(\"❌ Error:\", e)\n"
+    "    print(\"Error:\", e)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
     "test_data_path = os.path.join(\"..\", \"API\", \"data\", \"processed\", \"test_data.csv\")\n",
     "df_test = pd.read_csv(test_data_path)\n",
     "\n",
-    "print(\"✅ Test Data Loaded Successfully!\")\n",
+    "print(\"Test Data Loaded Successfully!\")\n",
     "print(df_test.head())  # Check the first few rows"
    ]
   },
