Trained and implemented ANN

--- a/.ipynb Notebooks/packates_capturing.ipynb
+++ b/.ipynb Notebooks/packates_capturing.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
     "            'dst_host_same_srv_rate': same_srv_rate,  # approx\n",
     "            'dst_host_diff_srv_rate': diff_srv_rate,  # approx\n",
     "            'dst_host_srv_serror_rate': dst_host_srv_serror_rate,\n",
-    "            'class': 'normal'  # placeholder\n",
+    "            # 'class': 'normal'  # placeholder\n",
     "        }\n",
     "\n",
     "        data.append(features)\n",
@@ -227,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
